# langchain-gpt-41-to-5-upgrade

./: .env.example  MIGRATION_PLAYBOOK.md  README.md  UPGRADE_NOTES.md  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
evals/: README.md  eval_byod.py  eval_chat.py  eval_config.py  run_all.py
evals/data/: byod_test_data.jsonl  chat_test_data.jsonl
scripts/: generate_byod_eval_data.py
